--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ h2 {
 }
 
 .main-header {
-  background-color: green;
+  background-color: yellow;
   background-size: cover;
   padding-bottom: 30px;
 }
